--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "api/**/*.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 30,
+        "memory": 1024
+      }
     },
     {
       "src": "*.html",
@@ -33,7 +37,7 @@
     },
     {
       "src": "/([A-Za-z0-9_-]{20,})",
-      "dest": "/article.html?articleId=$1",
+      "dest": "/article.html",
       "headers": {
         "Cache-Control": "s-maxage=86400"
       }
@@ -74,17 +78,5 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  },
-  "functions": {
-    "api/**/*.js": {
-      "maxDuration": 30,
-      "memory": 1024
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/:articleId",
-      "destination": "/article.html"
-    }
-  ]
+  }
 }
