--- a/vercel.json
+++ b/vercel.json
@@ -18,34 +18,34 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/",
-      "dest": "/index.html"
+      "source": "/",
+      "destination": "/index.html"
     },
     {
-      "src": "/upload",
-      "dest": "/upload.html"
+      "source": "/upload",
+      "destination": "/upload.html"
     },
     {
-      "src": "/admin",
-      "dest": "/admin.html"
+      "source": "/admin",
+      "destination": "/admin.html"
     },
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
     },
     {
-      "src": "/([A-Za-z0-9_-]{20,})",
-      "dest": "/article.html",
+      "source": "/static/:path*",
       "headers": {
-        "Cache-Control": "s-maxage=86400"
+        "cache-control": "public, max-age=31536000, immutable"
       }
     },
     {
-      "src": "/static/(.*)",
+      "source": "/:articleId([A-Za-z0-9_-]{20,})",
+      "destination": "/article.html",
       "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
+        "Cache-Control": "s-maxage=86400"
       }
     }
   ],
