--- a/vercel.json
+++ b/vercel.json
@@ -18,30 +18,46 @@
       "use": "@vercel/static"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/",
-      "destination": "/index.html"
+      "src": "/api/(.*)",
+      "dest": "/api/$1",
+      "headers": {
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,POST,OPTIONS",
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Cookie"
+      }
     },
     {
-      "source": "/upload",
-      "destination": "/upload.html"
+      "src": "/",
+      "dest": "/index.html"
     },
     {
-      "source": "/admin",
-      "destination": "/admin.html"
+      "src": "/upload",
+      "dest": "/upload.html"
     },
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+      "src": "/admin",
+      "dest": "/admin.html"
     },
     {
-      "source": "/static/:path*",
-      "destination": "/static/:path*"
+      "src": "/static/(.*)",
+      "dest": "/static/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
-      "source": "/:articleId([A-Za-z0-9_-]{20,})",
-      "destination": "/article.html"
+      "src": "/([a-f0-9]{20,})",
+      "dest": "/article.html",
+      "headers": {
+        "Cache-Control": "s-maxage=86400"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "headers": [
@@ -67,24 +83,6 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=0, must-revalidate"
-        }
-      ]
-    },
-    {
-      "source": "/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/:articleId([A-Za-z0-9_-]{20,})",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "s-maxage=86400"
         }
       ]
     }
