--- a/vercel.json
+++ b/vercel.json
@@ -48,6 +48,22 @@
     {
       "src": "*.ico",
       "use": "@vercel/static"
+    },
+    {
+      "src": "*.woff",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "*.woff2",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "*.ttf",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "*.eot",
+      "use": "@vercel/static"
     }
   ],
   "rewrites": [
@@ -157,7 +173,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "source": "/(.*)\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)$",
       "headers": [
         {
           "key": "Cache-Control",
@@ -170,7 +186,7 @@
       ]
     },
     {
-      "source": "/(.*\\.html)",
+      "source": "/(.*)\\.html$",
       "headers": [
         {
           "key": "Cache-Control",
